# jupyterlab_genv

./: .gitignore  .prettierignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  Test.ipynb  install.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: build.yml  check-release.yml
jupyter-config/nb-config/: jupyterlab_genv.json
jupyter-config/server-config/: jupyterlab_genv.json
jupyterlab_genv/: __init__.py  __main__.py  _version.py  genv_provisioner.py  handlers.py
jupyterlab_genv/genv/: __init__.py  control.py  devices.py  envs.py  installation.py
src/: dialogs.tsx  handler.ts  index.ts  index.tsx
src/models/: env.ts
