[build-system]
requires = ["hatchling>=1.3.1", "jupyterlab~=3.1"]
build-backend = "hatchling.build"

[project]
name = "jupyterlab_genv"
version = "0.2.0"
description = "A JupyterLab extension for managing GPU environments using genv."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
authors = [
    { name = "Raz Rotenberg", email = "raz.rotenberg@gmail.com" },
]
keywords = ["Jupyter", "JupyterLab", "JupyterLab3"]
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "jupyter_server>=1.6,<2"
]

[project.optional-dependencies]
test = [
]

[project.urls]
Homepage = "https://github.com/run-ai/jupyterlab_genv"

[tool.hatch.build]
artifacts = ["jupyterlab_genv/labextension"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlab_genv/labextension" = "share/jupyter/labextensions/jupyterlab_genv"
"install.json" = "share/jupyter/labextensions/jupyterlab_genv/install.json"
"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"
"jupyter-config/nb-config" = "etc/jupyter/jupyter_notebook_config.d"

[tool.hatch.build.targets.sdist]
exclude = [".github"]

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyterlab_genv/labextension/static/style.js",
    "jupyterlab_genv//labextension/package.json",
]
skip-if-exists = ["jupyterlab_genv/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "jupyterlab_genv/labextension"

[tool.tbump]
field = [
    { name = "channel", default = "" },
    { name = "release", default = "" },
]
file = [
    { src = "pyproject.toml", version_template = "version = \"{major}.{minor}.{patch}{channel}{release}\"" },
    { src = "jupyterlab_genv/_version.py" },
    { src = "package.json" },
]

[tool.tbump.version]
current = "0.2.0"
regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[project.entry-points."jupyter_client.kernel_provisioners"]
genv-provisioner = "jupyterlab_genv.genv_provisioner:GenvProvisioner"
